# java-analyzer-provider

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  Makefile  README.md  build.rs
docs/: condition-parsing-fix.md  docker.md  e2e-testing-setup-completion.md  java-provider-design.md  java-provider-implementation-plan.md  phase-2-completion-summary.md  phase-2-plan.md  setup-summary.md  task-1.4-completion-summary.md  task-1.5-completion-summary.md  task-1.7-completion-summary.md  task-2.1-completion-summary.md  task-2.3-completion-summary.md  task-2.4-completion-summary.md  task-2.6-completion-summary.md  task-2.7-completion-summary.md  task-2.8-completion-summary.md  task-2.9-completion-summary.md
docs/archive/: README.md  docker-setup-completion.md  task-1.6-completion-summary.md  task-2.10-completion-summary.md  task-2.2-completion-summary.md  task-2.5-completion-summary.md
e2e-tests/: README.md  provider_settings.json
examples/: advanced_tsg_demo.rs  inheritance_tracking_demo.rs  query_engine_demo.rs  type_resolver_demo.rs
src/: lib.rs  main.rs
tests/: advanced_tsg_test.rs  annotation_test.rs  constructor_call_test.rs  debug_constructor_calls.rs  debug_method_calls.rs  explore_advanced_ast.rs  explore_ast.rs  explore_method_calls.rs  gradle_dependency_test.rs  grpc_service_test.rs  inheritance_tracking_test.rs  maven_dependency_test.rs  maven_parser_test.rs  method_call_test.rs  parser_integration_test.rs  query_engine_test.rs  source_location_test.rs  type_resolver_integration_test.rs  variable_test.rs  verify_advanced_features.rs
(+44 files in other folders)
